use virtual threads
verinice-veo#1116